commit initial layout fixes for collapsed menu

--- a/css/src/tokens/layout.scss
+++ b/css/src/tokens/layout.scss
@@ -19,5 +19,6 @@ $layout-gap-scalable-custom-property-name: '--layout-gap-scalable' !default;
 $layout-flyout-width-name: '--layout-flyout-width' !default;
 $layout-flyout-width-desktop-custom-property-name: '--layout-flyout-width-desktop' !default;
 $layout-flyout-width-widescreen-custom-property-name: '--layout-flyout-width-widescreen' !default;
-
+$layout-menu-collapsed-width-name: '--layout-menu-collapsed-width' !default;
+$layout-menu-collapsed-width-widescreen-spacer-width-name: '--layout-menu-collapsed-width-widescreen' !default;
 //@end-sass-export-section
